Revert "🐛 FIX: outlines for invisible buttons"
This reverts commit bfe1551c12925dc971d7ce4a5bbccaa3ad2432e7.

--- a/src/scss/blocks/_list-item.scss
+++ b/src/scss/blocks/_list-item.scss
@@ -3,16 +3,16 @@ li[draggable] {
   display: flex;
   align-items: baseline;
   padding: 1rem 1.5rem;
-  border-block-start: solid 2px transparent;
-  border-block-end: solid 2px var(--clr-neutral-300);
   transition: all 200ms;
   cursor: move;
   will-change: transform;
   -webkit-user-select: text;
   user-select: none;
+  border-block-end: solid 2px var(--clr-neutral-300);
+  border-block-start: solid 2px transparent;
 
   &:hover button {
-    opacity: 1;
+    visibility: initial;
   }
 
   [contenteditable] {
@@ -25,7 +25,7 @@ li[draggable] {
   }
 
   button {
-    opacity: 0;
+    visibility: hidden;
     padding: 0.5rem;
     border: 0;
     margin-inline-start: auto;
@@ -37,3 +37,7 @@ li[draggable] {
     pointer-events: none;
   }
 }
+
+// li[draggable]:hover button {
+//   visibility: initial;
+// }
